# redteam-projects-rust

./: LICENSE  README.md
arp-scanner/: Cargo.toml  manuf
arp-scanner/src/: main.rs
basic-tcp-port-scanner/: Cargo.toml
basic-tcp-port-scanner/src/: main.rs
chat-server/: Cargo.toml
chat-server/src/: main.rs
dns-exfiltration/: Cargo.toml  test.txt  upload.sh
dns-exfiltration/src/: main.rs
ftp-bruteforcer/: Cargo.toml
ftp-bruteforcer/src/: main.rs
icmp-exfiltration/: Cargo.toml  run.sh  test2
mini-http-server/: Cargo.toml
mini-http-server/src/: main.rs
ssh-bruteforce/: Cargo.toml
ssh-bruteforce/src/: main.rs
ssh-bruteforcer/: Cargo.toml
