[package]
name = "ftp-bruteforcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
ftp = "3.0.1"
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "macros"] }