[package]
name = "icmp-exfiltration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.14.3"
ping = "0.5.2"
socket2 = { version = "0.5.7", features = ["all"] }
tun-tap = "0.1.4"
