[package]
name = "mini-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
maud = { version = "0.26.0", features = ["axum"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-fs = "0.1.7"
